[package]
name = "tower-fallback"
version = "0.2.28"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT"
edition = "2021"

[dependencies]
pin-project = "0.4.29"
# tower = "0.4.13"
tower = { git = "https://github.com/dimxy/tower.git", branch = "v0.4.13-debug-timeout"  }
futures-core = "0.3.21"
tracing = "0.1.31"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full", "tracing", "test-util"] }

zebra-test = { path = "../zebra-test/" }
