[package]
name = "zebra-utils"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT OR Apache-2.0"
version = "1.0.0-beta.13"
edition = "2021"
# Prevent accidental publication of this utility crate.
publish = false

[[bin]]
name = "block-template-to-proposal"
# this setting is required for Zebra's Docker build caches
path = "src/bin/block-template-to-proposal/main.rs"
required-features = ["getblocktemplate-rpcs"]

[features]
default = []

# Production features that activate extra dependencies, or extra features in dependencies

# Experimental mining RPC support
getblocktemplate-rpcs = [
    "zebra-rpc/getblocktemplate-rpcs",
    "zebra-node-services/getblocktemplate-rpcs",
    "zebra-chain/getblocktemplate-rpcs",
]

[dependencies]
structopt = "0.3.26"
color-eyre = "0.6.1"
hex = "0.4.3"
serde_json = "1.0.82"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.11"

zebra-chain = { path = "../zebra-chain" }
zebra-consensus = { path = "../zebra-consensus" }
zebra-state = { path = "../zebra-state" }

zebra-node-services = { path = "../zebra-node-services" }

# Experimental feature getblocktemplate-rpcs
zebra-rpc = { path = "../zebra-rpc", optional = true }